# freescout-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/freescout/: __init__.py  _transport.py  _version.py  client.py  enums.py  exceptions.py  models.py
src/freescout/resources/: __init__.py  base.py  conversations.py  customers.py  mailboxes.py  tags.py  threads.py  users.py  webhooks.py
src/freescout_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_client.py  test_conversations.py  test_customers.py  test_exceptions.py  test_mailboxes.py  test_tags.py  test_threads.py  test_users.py  test_webhooks.py
